# python-project

./: .gitignore  Readme.md  movies.csv
agents/langraph/tutorial/: environment.yml  langgraph.json  main.py  pyproject.toml
agents/langraph/tutorial/app/: agents.py  api.py
agents/praison/: main.py  system_report.txt
agents/pydantic/: bank_support.py  main.py  requirements.txt  roulette_agent.py  weather_agent.py
course-langraph/module-1/: agent.py  agent_memory.py  chain.py  langgraph.json  router.py  simple_graph.py
course-langraph/module-2/: langgraph.json  multiple-schemas.py  state_reducers.py  state_schema.ipynb  state_schema.py
courses/cf_cajero_automatico/: main.py  post.py  school.py
courses/coursera/: amazon_converse.py  amazon_converse_lambda_tool.py  amazon_create_prompt.py  amazon_text.py  amazon_text_stream.py  api_bedrock.py  converse.py  ejercicio_api_bedrock.ipynb  ejercicio_api_bedrock_create_prompt.py  genai-exercise1-video.ipynb  hello.py  lambda_function.py  pyproject.toml
courses/mcp-init-anthropic/: mcp_client.py  mcp_server.py  pyproject.toml
courses/theneural/langgraph_workshop/: 1.1_langraph_react_agent_examples.ipynb  1_langgraph_course.ipynb  1_langgraph_crash_course.ipynb  2_1.short_term_memory.ipynb  2_1_Guia_short_term_memory.ipynb  2_2.long_term_memory.ipynb  2_2_Guia_long_term_memory.ipynb  3.Speech_to_text.ipynb  5-human-inthe-loop.ipynb  Modelo_comparacion_costos.md  agentic_patterns.ipynb  ejemplos para practicar react agent.py  example.db-shm  example.db-wal  langgraph_essential.ipynb  langraph_essential_email.ipynb  multimodal_llm_extract_data.ipynb  pyproject.toml  text_chroma.txt
courses/theneural/langgraph_workshop/longterm_memory_db/: chroma.sqlite3
courses/theneural/langgraph_workshop/neural_telegram/: 2_2_Guia_long_term_memory.ipynb  3_speech_to_text_systems.ipynb  4_text_to_speech_systems.ipynb  5_vision_language_models.ipynb  6_image_generation.ipynb  7_telegram_agent.ipynb
courses/theneural/langgraph_workshop/tribuia/: Clase_01_LLM_Básico.ipynb  Clase_02_LLM_Multimodal.ipynb
examples_swarm/: bare_minimum.py  basic.py  context_variables.py  main.py
fine-tunning/: Readme.md  main.py  train.csv
langGraph/longterm/: hello.py  lesson1.ipynb  lesson2.ipynb  lesson3.ipynb  main.py  prompts.py  pyproject.toml
langchain/: requirements.txt
langchain/chains/: 2_chanins_under_the_hood.py
langchain/chat_models/: 1_chat_model_basic.py  (+2 more)
langchain/nicobyte/: tool.py  (+1 more)
py-profesional/: ciclo_conditions.py  class.py  dictionarys.py  functions.py  herencia.py  herencia_multiple.py  main.py  test.yaml
swarm-project-structure-demo/: main.py
(+18 files in other folders)
