[project]
name = "tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "manuonda@gmail.com"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
    python = "^3.11",
    langraph = "^0.2.60",
    python-dotenv = "^1.0.1",
    langgraph-cli = {extras = ["inmem"] , version = "^0.1.65"},
]
  

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
