[project]
name = "langgraph-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gdown>=5.2.0",
    "google>=3.0.0",
    "langchain>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "load-dotenv>=0.1.0",
    "pillow>=12.0.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
]
