[project]
name = "langgraph-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core LangGraph & LangChain
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langchain>=1.0.0",
    "langchain-core>=0.3.79",
    "langchain-community>=0.3.31",
    # LLM Providers
    "langchain-openai>=0.3.35",
    "langchain-google-genai>=3.0.0",
    # Vector Stores & Text Processing
    "langchain-chroma>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    # File Processing
    "pymupdf>=1.26.5", # PDF processing
    "pillow>=12.0.0", # Image processing
    "gdown>=5.2.0", # Google Drive downloads
    # Utilities
    "python-dotenv>=1.1.1", # Environment variables
    # Development (optional)
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.17.0",
    "typing-extensions>=4.15.0",
]
